# stm32-ground

./: .gitignore  .gitmodules  LICENSE  README.md
.idx/: dev.nix
blink/: CMakeLists.txt  STM32F407VETX_FLASH.ld
blink/include/: main.h  stm32_assert.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
blink/src/: main.c  stm32f4xx_it.c
blue-blink/: CMakeLists.txt
blue-blink/src/: main.c
hello_world/: CMakeLists.txt  STM32F407VETX_FLASH.ld
